--- a/Freelancers.Api/appsettings.json
+++ b/Freelancers.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Freelancers;Integrated Security=True;Encrypt=False;Trust Server Certificate=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
