Add SignUp/Login with Jwt Authentication And Confirm Email

--- a/Freelancers.Api/appsettings.json
+++ b/Freelancers.Api/appsettings.json
@@ -8,5 +8,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "FreelancersApp",
+    "Audience": "FreelancersApp users",
+    "Key": "fb6hDxA13QCfKvXKwB9uSau85HERT2D1",
+    "ExpiryHours": 8
+  },
+  "MailSettings": {
+    "Email": "",
+    "DisplayName": "Freelancers",
+    "Password": "",
+    "Host": "smtp.gmail.com",
+    "port": 587
+  }
+
 }
