Fix FreelancersService error and add remote database

--- a/Freelancers.Api/appsettings.json
+++ b/Freelancers.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Freelancers;Integrated Security=True;Encrypt=False;Trust Server Certificate=False;"
+    "DefaultConnection": "Server=db6956.public.databaseasp.net; Database=db6956; User Id=db6956; Password=6Jg@D#3e%4hB; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -16,9 +16,9 @@
     "ExpiryHours": 8
   },
   "MailSettings": {
-    "Email": "",
+    "Email": "freelancers.system.1@gmail.com",
     "DisplayName": "Freelancers",
-    "Password": "",
+    "Password": "vmiw mraq ludg pnfq",
     "Host": "smtp.gmail.com",
     "port": 587
   }
