--- a/Freelancers.Api/appsettings.json
+++ b/Freelancers.Api/appsettings.json
@@ -1,12 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db6956.public.databaseasp.net; Database=db6956; User Id=db6956; Password=6Jg@D#3e%4hB; Encrypt=False; MultipleActiveResultSets=True;"    
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+    "DefaultConnection": "Server=db6956.public.databaseasp.net; Database=db6956; User Id=db6956; Password=6Jg@D#3e%4hB; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "AllowedHosts": "*",
   "Jwt": {
@@ -21,6 +15,31 @@
     "Password": "vmiw mraq ludg pnfq",
     "Host": "smtp.gmail.com",
     "port": 587
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./Logs/log-.txt",
+          "rollingInterval": "Day", 
+          "formatter": "Serilog.Formatting.Json.JsonFormatter"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "ApplicationName": "FreeLancers"
+    }
   }
 
 }
