Add hangfire and add send confirmation email to background jobs

--- a/Freelancers.Api/appsettings.Development.json
+++ b/Freelancers.Api/appsettings.Development.json
@@ -3,7 +3,7 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft.AspNetCore": "Warning"
+        "Microsoft.AspNetCore": "Warning"        
       }
     },
     "WriteTo": [
@@ -14,14 +14,14 @@
         "Name": "File",
         "Args": {
           "path": "./Logs/log-.txt",
-          "rollingInterval": "Day", 
+          "rollingInterval": "Day",
           "formatter": "Serilog.Formatting.Json.JsonFormatter"
         }
       }
     ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
       "ApplicationName": "FreeLancers"
     }
   }
-
 }
