--- a/Freelancers.Api/appsettings.json
+++ b/Freelancers.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db6956.public.databaseasp.net; Database=db6956; User Id=db6956; Password=6Jg@D#3e%4hB; Encrypt=False; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=db6956.public.databaseasp.net; Database=db6956; User Id=db6956; Password=6Jg@D#3e%4hB; Encrypt=False; MultipleActiveResultSets=True;",
+    "HangfireConnection": "Server=db7223.public.databaseasp.net; Database=db7223; User Id=db7223; Password=n+4Y3C@wX-e2; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "AllowedHosts": "*",
   "Jwt": {
@@ -20,7 +21,8 @@
     "MinimumLevel": {
       "Default": "Warning",
       "Override": {
-        "Microsoft.AspNetCore": "Warning"
+        "Microsoft.AspNetCore": "Warning",
+        "Hangfire": "Information"
       }
     },
     "WriteTo": [
@@ -31,7 +33,7 @@
         "Name": "File",
         "Args": {
           "path": "./Logs/log-.txt",
-          "rollingInterval": "Day", 
+          "rollingInterval": "Day",
           "formatter": "Serilog.Formatting.Json.JsonFormatter"
         }
       }
@@ -40,6 +42,10 @@
     "Properties": {
       "ApplicationName": "FreeLancers"
     }
+  },
+  "HangfireSettings": {
+    "Username": "admin",
+    "Password": "P@$$word123"
   }
 
 }
