--- a/Freelancers.Api/appsettings.Development.json
+++ b/Freelancers.Api/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
+  "ConnectionStrings": {
+    // "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Freelancers;Integrated Security=True;Encrypt=False;Trust Server Certificate=False;"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft.AspNetCore": "Warning"        
+        "Microsoft.AspNetCore": "Warning"
       }
     },
     "WriteTo": [
