Working on remote database

--- a/Freelancers.Api/appsettings.Development.json
+++ b/Freelancers.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Freelancers;Integrated Security=True;Encrypt=False;Trust Server Certificate=False;"
+    // "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Freelancers;Integrated Security=True;Encrypt=False;Trust Server Certificate=False;"
   },
   "Serilog": {
     "MinimumLevel": {
