Modified project fluent validator and register it

--- a/Freelancers.Api/appsettings.Development.json
+++ b/Freelancers.Api/appsettings.Development.json
@@ -26,5 +26,8 @@
     "Properties": {
       "ApplicationName": "FreeLancers"
     }
+  },
+  "Urls": {
+    "BaseUrl": "https://localhost:7189"
   }
 }
