Add tracks module and fix validation

--- a/Freelancers.Api/Freelancers.Api.csproj
+++ b/Freelancers.Api/Freelancers.Api.csproj
@@ -21,6 +21,10 @@
     <ProjectReference Include="..\Service\Freelancers.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Validators\Projects\" />
+  </ItemGroup>
+
   
 	
 
